{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 62,
  "lineage": "459f623b-8c05-4167-fb5f-a633b6617658",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0606dd43116f5ed57",
            "arn": "arn:aws:ec2:us-west-2:281803030231:instance/i-0a2f00dc1cd3708ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2f00dc1cd3708ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b3a8ae8a55197537"
              }
            ],
            "primary_network_interface_id": "eni-0b3a8ae8a55197537",
            "private_dns": "ip-10-0-0-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.236",
            "public_dns": "ec2-34-210-43-114.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.43.114",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f40688c91f59a08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ac5cfbf57fca1f9",
            "tags": {
              "Name": "ec2_practice",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "ec2_practice",
              "Project": "docker practice"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a88d79422952fb8c"
            ]
          },
          "dependencies": [
            "module.SG.aws_security_group.ec2_practice_SG",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_practice_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:security-group/sg-0a88d79422952fb8c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a88d79422952fb8c",
            "ingress": [],
            "name": "ec2_practice_SG",
            "name_prefix": "",
            "owner_id": "281803030231",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_practice_SG",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "ec2_practice_SG",
              "Project": "docker practice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5473937b6c4b005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_practice_SGegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-364094526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-west-2",
            "security_group_id": "sg-0a88d79422952fb8c",
            "security_group_rule_id": "sgr-0e7716494bc8a24b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG.aws_security_group.ec2_practice_SG",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_practice_SGingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1521800853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-0a88d79422952fb8c",
            "security_group_rule_id": "sgr-066398455c2e1f2f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG.aws_security_group.ec2_practice_SG",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:internet-gateway/igw-0b481476bb3272599",
            "id": "igw-0b481476bb3272599",
            "owner_id": "281803030231",
            "region": "us-west-2",
            "tags": {
              "Name": "MyDockerIGW",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "MyDockerIGW",
              "Project": "docker practice"
            },
            "vpc_id": "vpc-0b5473937b6c4b005"
          },
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:route-table/rtb-0e35f41f449f52817",
            "id": "rtb-0e35f41f449f52817",
            "owner_id": "281803030231",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "Private_Route_table",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "Private_Route_table",
              "Project": "docker practice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5473937b6c4b005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:route-table/rtb-0666d7e324a3af4d5",
            "id": "rtb-0666d7e324a3af4d5",
            "owner_id": "281803030231",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b481476bb3272599",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_table",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "Public_Route_table",
              "Project": "docker practice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5473937b6c4b005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.MyIGW",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be64a3f1d4d5e446",
            "region": "us-west-2",
            "route_table_id": "rtb-0666d7e324a3af4d5",
            "subnet_id": "subnet-08ac5cfbf57fca1f9"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.MyIGW",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:subnet/subnet-08ac5cfbf57fca1f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ac5cfbf57fca1f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281803030231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "public-1",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "public-1",
              "Project": "docker practice"
            },
            "vpc_id": "vpc-0b5473937b6c4b005"
          },
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:281803030231:vpc/vpc-0b5473937b6c4b005",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07eee69f4de64d5c8",
            "default_route_table_id": "rtb-0e852db1826f8ba7e",
            "default_security_group_id": "sg-0d81c4eeb31ea2736",
            "dhcp_options_id": "dopt-0687f3bb3cdbaacb4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5473937b6c4b005",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e852db1826f8ba7e",
            "owner_id": "281803030231",
            "region": "us-west-2",
            "tags": {
              "Name": "MyDockerVPC",
              "Project": "docker practice"
            },
            "tags_all": {
              "Name": "MyDockerVPC",
              "Project": "docker practice"
            }
          }
        }
      ]
    }
  ]
}